# cmake

./: Note.md
ch1/: CMakeLists.txt
ch2/: CMakeLists.txt
ch2/inc/: main.h  test.h
ch2/src/: main.cpp  test.cpp
ch3/: CMakeLists.txt  CMakeUserPresets.json  catchtest.cpp  conanfile.txt  test1.cpp  test2.cpp
ch3/install/: ch3-targets-debug.cmake  ch3-targets.cmake
ch4/: CMakeLists.txt
ch4/inc/: onehot.h  wrapper.h
ch4/src/: main.cpp
